force-app/main/default/objects/CJFW_Employee__c/CJFW_Employee__c.object-meta.xml
<CustomObject>
    <description>[P2]  공통 - (임시) 임직원 정보</description>
    <label>Employee</label>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>