force-app/main/default/objects/CJFW_Employee__c/fields/NameVI__c.field-meta.xml
<CustomField>
    <fullName>NameVI__c</fullName>
    <label>Name (VI)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>