force-app/main/default/objects/CJFW_Employee__c/fields/NameZH__c.field-meta.xml
<CustomField>
    <fullName>NameZH__c</fullName>
    <label>Name (ZH)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>